# aegis-runtime

./: .gitignore  aegis-conformance-integration-matrix.md  aegis-runtime-contracts-v1.2.md  burn-in-report-v0.md  burn-in-report-v2.md  pyproject.toml  state-authority-evidence-pack-v0.md
aegis/: __init__.py
aegis/harness/: __init__.py  dispatcher.py  pipeline.py
aegis/models/: __init__.py  agent_spec.py  enums.py  trust_entry.py
aegis/orchestration/: __init__.py  chain.py
aegis/registry/: __init__.py  agent_registry.py  capability_vocabulary.py  schema_validator.py  spec_diff.py  trust_registry.py
aegis/router/: __init__.py  router.py  scoring.py  task_descriptor.py  types.py
aegis/state/: __init__.py  agent_history_projection.py  event.py  event_log.py  state_authority.py  task_lifecycle_projection.py
aegis/tests/: __init__.py  test_agent_spec_validation.py  test_capability_lookup.py  test_chain.py  test_live_integration.py  test_pipeline.py  test_registry_crud.py  test_router_failure_modes.py  test_router_filtering.py  test_router_ranked_output.py  test_router_scoring.py  test_router_spike.py  test_state_authority.py  test_trust_registry.py  test_version_enforcement.py
aegis/tests/fixtures/: __init__.py
